--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,1 +1,12 @@
 @import './base.css';
+
+main {
+  padding: 50px;
+}
+
+h1 {
+  font-size: 32px;
+  font-weight: bold;
+  margin-bottom: 50px;
+  text-align: center;
+}
